test_regress/t/t_property_nfa_edge_shapes.out
*-* All Finished *-*
[215] %Error: t_property_nfa_edge_shapes.v:27: Assertion failed in top.t
%Error: t/t_property_nfa_edge_shapes.v:27: Verilog $stop
Aborting...
